--- a/NodeJS/bower.json
+++ b/NodeJS/bower.json
@@ -1,11 +1,11 @@
 {
     "name": "starter-node-angular",
-    "version": "1.0.0",
+    "version": "latest",
     "dependencies": {
         "bootstrap": "latest",
         "font-awesome": "latest",
         "animate.css": "latest",
         "angular": "latest",
-        "angular-route": "latest"   
+        "angular-route": "latest"
     }
 }
