--- a/NodeJS/bower.json
+++ b/NodeJS/bower.json
@@ -1,11 +1,15 @@
 {
-    "name": "starter-node-angular",
-    "version": "latest",
-    "dependencies": {
-        "bootstrap": "latest",
-        "font-awesome": "latest",
-        "animate.css": "latest",
-        "angular": "latest",
-        "angular-route": "latest"
-    }
+  "name": "starter-node-angular",
+  "version": "1.4.1",
+  "dependencies": {
+    "bootstrap": "latest",
+    "font-awesome": "latest",
+    "animate.css": "latest",
+    "angular": "latest",
+    "angular-route": "latest",
+    "angular-cookies": "latest"
+  },
+  "resolutions": {
+    "angular": "1.4.2"
+  }
 }
