--- a/NodeJS/bower.json
+++ b/NodeJS/bower.json
@@ -7,7 +7,8 @@
     "animate.css": "latest",
     "angular": "latest",
     "angular-route": "latest",
-    "angular-cookies": "latest"
+    "angular-cookies": "latest",
+    "angular-bootstrap": "latest"
   },
   "resolutions": {
     "angular": "1.4.2"
